# cuda

./: CMakeLists.txt  kernel.cl  kernel.cu  main.cpp  main_cl.cpp
